# iota

./: .travis.yml  Cargo.toml  README.md
src/: main.rs
src/iota/: bindings.rs  buffer.rs  command.rs  editor.rs  key.rs  keyboard.rs  keymap.rs  lib.rs  overlay.rs  textobject.rs  view.rs
src/iota/modes/: emacs.rs  gui.rs  insert.rs  mod.rs  normal.rs  standard.rs
