[project]
name = "iota-editor"
version = "0.1.0"
description = "A simple text editor"
license = "MIT"
homepage = "https://github.com/gchp/iota"
repository = "https://github.com/gchp/iota"
keywords = ["editor", "text", "terminal"]
readme = "README.md"
authors = ["Greg Chapple <gregchapple1@gmail.com>"]

[dependencies]
gapbuffer = "0.1.1"
unicode-width = "0.1.1"
clippy = {version = "*", optional = true}
regex = "0.1"
lazy_static = "0.2"
clipboard = "0.4.6"

[dependencies.rustbox]
git = "https://github.com/gchp/rustbox"

[lib]
name = "iota"
path = "src/iota/lib.rs"

[[bin]]
path = "src/main.rs"
name = "iota"
doc = false
